--- a/.gitignore
+++ b/.gitignore
@@ -21,4 +21,10 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
-/target
+.settings
+target
+.project
+.factorypath
+/.apt_generated/
+/.apt_generated_tests/
+
